// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components ImageButton propagates href to OptionalLink 1`] = `
"<styled.div className={[undefined]}>
  <OptionalLink href="/some/path" onClick={[undefined]} dataCy={[undefined]}>
    <styled.div>
      <img src="" />
    </styled.div>
  </OptionalLink>
</styled.div>"
`;

exports[`components ImageButton propagates onClick to OptionalLink 1`] = `
"<styled.div className={[undefined]}>
  <OptionalLink href={[undefined]} onClick={[Function: onClick]} dataCy={[undefined]}>
    <styled.div>
      <img src="" />
    </styled.div>
  </OptionalLink>
</styled.div>"
`;

exports[`components ImageButton renders label and image 1`] = `
"<styled.div className={[undefined]}>
  <OptionalLink href={[undefined]} onClick={[undefined]} dataCy={[undefined]}>
    <styled.div>
      <img src="imgsource.jpg" />
      my label
    </styled.div>
  </OptionalLink>
</styled.div>"
`;
